@startuml US09-DM
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

class EthicsCommitteeMember {
    name
    email
}

class "Political Agent" as PoliticalAgent {
    name
    email
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class "Declaration of Interests" as Declaration {
    id
    submissionDate
}

enum DeclarationStatus {
    PENDING
    VALIDATED
    REJECTED
}

enum DeclarationType {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

class PositionEntry {
    functionDesignation
    grossSalary
    sideIncomeConsulting
    sideIncomeBoardMemberships
    startDate
    endDate
}

class Income {
    amount
    source
    date
}

class SubsidyEntry {
    amount
    description
    date
}

class AssetEntry {
    assetValue
}

enum AssetType {
    REAL_ESTATE
    VEHICLES
    STOCKS
}

class "Real Estate" as RealEstate {
    description
    municipality
}

class VehicleAsset {
    description
}

class StockAsset {
    description
}

class BusinessParticipation {
    companyNIF
    totalValueInStocks
    companyPercentage
}

EthicsCommitteeMember "*" -- "*" PoliticalAgent : consults situation of >

PoliticalAgent "1" -- "*" Declaration : submits >

Declaration "*" -- "1" DeclarationType : has >
Declaration "*" -- "1" DeclarationStatus : has >

Declaration "1" *-- "*" PositionEntry : holds >
Declaration "1" *-- "*" Income : includes >
Declaration "1" *-- "*" SubsidyEntry : includes >
Declaration "1" *-- "*" AssetEntry : declares >
Declaration "1" *-- "*" BusinessParticipation : declares >

AssetEntry "*" -- "1" AssetType : classified as >
AssetEntry "0..1" -- "0..1" RealEstate : details >
AssetEntry "0..1" -- "0..1" VehicleAsset : details >
AssetEntry "0..1" -- "0..1" StockAsset : details >

note bottom of AssetEntry
    {xor} an AssetEntry details exactly one of
    RealEstate / VehicleAsset / StockAsset,
    according to its AssetType.
end note

@enduml
